# linux-backend-api

./: .gitignore  README.md
backend/: .dockerignore  .env.example  CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/common/: errors.h
backend/src/controller/: controller.cpp  controller.h
backend/src/db/: db.cpp  db.h
backend/src/models/: user.h
backend/src/queries/: queries.cpp  queries.h
backend/src/server/: server.cpp  server.h
backend/src/service/: service.cpp  service.h
infra/db/: .env.example  init.sql
infra/docker/: compose.yaml
